--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "sass": "^1.64.1",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
