--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "jotai": "^2.2.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
