--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/supabase-js": "^2.31.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
