--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
+    "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "sass": "^1.64.1",
     "swr": "^2.2.0",
